--- a/css/pokedex.css
+++ b/css/pokedex.css
@@ -1,1 +1,31 @@
-pokedex.css
+body {
+  background: url("../img/pokedex.jpg") no-repeat center center fixed; /*Hay que meterle ../ para que vaya atras en el arbol de directorios. Esta en css/ */
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+input{
+  width: 600px;
+  height: 40px;
+  border-radius: 3px;
+}
+
+button{
+  height: 40px;
+  width: 120px;
+  border-radius: 5px;
+}
+
+header{
+  margin: 60px 0;
+}
+
+.content{
+  width: 80%;
+  height: auto;
+  background-color: white;
+  opacity: 0.3;
+  border-radius: 5px;
+}
